<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_generator_cpp</name>
  <version>4.6.5</version>
  <description>Generate the ROS interfaces in C++.</description>

  <maintainer email="aditya.pande@openrobotics.org">Aditya Pande</maintainer>
  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>
  <maintainer email="dharini@openrobotics.org">Dharini Dutia</maintainer>
  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>

  <license>Apache License 2.0</license>

  <author email="clalancette@openrobotics.org">Chris Lalancette</author>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>
  <buildtool_export_depend>python3</buildtool_export_depend>
  <buildtool_export_depend>rosidl_pycommon</buildtool_export_depend>

  <build_export_depend>rosidl_cmake</build_export_depend>
  <!-- This is needed for the rosidl_message_type_support_t struct and visibility macros -->
  <build_export_depend>rosidl_generator_c</build_export_depend>
  <build_export_depend>rosidl_runtime_cpp</build_export_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rosidl_cli</exec_depend>
  <exec_depend>rosidl_generator_type_description</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_generator_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
