<?xml version="1.0"?>
<package format="2">
  <name>rosidl_generator_py</name>
  <version>0.0.0</version>
  <description>Generate the ROS interfaces in Python.</description>
  <maintainer email="esteve@osrfoundation.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_c</buildtool_export_depend>

  <build_depend>rosidl_generator_c</build_depend>
  <!-- export??? -->
  <build_depend>rmw</build_depend>

  <depend>rmw_implementation</depend>

  <exec_depend>rmw_implementation_cmake</exec_depend>
  <exec_depend>rosidl_generator_c</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>

  <test_depend>ament_cmake_nose</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rmw_implementation_cmake</test_depend>
  <test_depend>rosidl_cmake</test_depend>
  <test_depend>rosidl_generator_c</test_depend>
  <test_depend>rosidl_typesupport_introspection_c</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
